--- a/index.html
+++ b/index.html
@@ -2,220 +2,116 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>JinnyLab Attendance</title>
-    <meta http-equiv="refresh" content="0; url=auth.html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600;700&display=swap" rel="stylesheet" />
+    <title>로그인 | JinnyLab</title>
     <style>
-      :root {
-        --bg-start: #f5f7fa;
-        --bg-end: #e2e8f0;
-        --glass-bg: rgba(255, 255, 255, 0.3);
-        --glass-border: rgba(255, 255, 255, 0.4);
-        --text-main: #1e2937;
-        --text-sub: #475569;
-        --accent-nav: #334155;
-        --accent-lav: #374151
-        --accent-btn: #64748b;
-        --card-bg: rgba(255, 255, 255, 0.6);
-        --btn-hover: #556b78;
-      }
-
-      * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Pretendard', sans-serif; }
-
       body {
-        background: linear-gradient(135deg, var(--bg-start), var(--bg-end));
-        display: flex; justify-content: center; align-items: center;
-        min-height: 100vh; color: var(--text-main);
+        margin: 0;
+        font-family: 'Helvetica Neue', Pretendard, sans-serif;
+        background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
       }
 
-      .container {
-        width: 100%; max-width: 720px;
-        background: var(--glass-bg);
+      .login-box {
+        background: rgba(255, 255, 255, 0.25);
         border-radius: 20px;
         padding: 40px;
+        width: 360px;
         backdrop-filter: blur(12px);
-        border: 1px solid var(--glass-border);
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-        position: relative;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        text-align: center;
       }
 
-      .logo {
-        text-align: center;
+      .login-box h2 {
+        font-size: 24px;
+        margin-bottom: 8px;
+        color: #1f2937;
+      }
+
+      .login-box p {
+        font-size: 14px;
         margin-bottom: 24px;
-      }
-      .logo svg { width: 160px; height: auto; }
-
-      h1 {
-        font-size: 28px; font-weight: 700;
-        color: var(--accent-nav); margin-bottom: 8px;
-        text-align: center;
+        color: #4b5563;
       }
 
-      .subtitle {
-        font-size: 16px; color: var(--text-sub);
-        margin-bottom: 32px; text-align: center;
-      }
-
-      h3 {
-        font-size: 18px; font-weight: 600;
-        color: var(--accent-nav); margin-top: 32px;
-      }
-
-      textarea, input[type='file'] {
+      input {
         width: 100%;
-        padding: 14px;
-        margin-top: 10px;
-        font-size: 15px;
+        padding: 12px;
+        margin-bottom: 16px;
         border: none;
         border-radius: 10px;
-        background: rgba(255, 255, 255, 0.7);
+        background: rgba(255, 255, 255, 0.8);
+        font-size: 14px;
+        transition: all 0.3s ease;
       }
 
-      input[type='file']::file-selector-button {
-        background: var(--text-sub);
-        border: none; color: var(--bg-end);
-        padding: 8px 14px; border-radius: 8px;
-        cursor: pointer; font-weight: 600;
-        font-weight: 400;
+      input:focus {
+        outline: none;
+        background: #fff;
+        box-shadow: 0 0 0 2px #6366f1;
       }
 
-      .btn-primary {
-        display: block;
-        width: 100%; text-align: center;
-        padding: 14px 0;
-        margin-top: 24px;
-        font-size:16px; font-weight:400;
-        color: #fff; background: var(--accent-btn);
-        border:none; border-radius: 12px;
-        background-color: #1e2937;
-        cursor:pointer; transition: background 0.3s;
-      }
-      .btn-primary:hover { background: var(--btn-hover); }
-
-      .result-section {
-        margin-top: 32px;
-        background: var(--card-bg);
-        border-radius: 16px;
-        padding: 24px;
-        box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-        border: 1px solid var(--glass-border);
-      }
-      .result-section h3 {
-        font-size: 17px; font-weight:600;
-        color: var(--accent-nav);
-        margin-bottom:12px;
-      }
-      ul { padding-left:20px; margin:0; }
-      li { font-size:14px; margin-bottom:6px; color:var(--text-main); }
-
-      .copy-button {
-        background: transparent;
-        border: 1px solid var(--accent-btn);
-        color: var(--text-sub);
-        padding: 10px 20px;
-        border-radius: 8px;
-        font-weight: 600;
-        cursor:pointer;
-        transition: background 0.3s, color 0.3s;
-        margin-top:12px;
-      }
-      .copy-button:hover {
-        background: var(--accent-btn);
-        color: #3b3737;
+      button {
+        width: 100%;
+        padding: 12px;
+        background: #111827;
+        color: #fff;
+        border: none;
+        border-radius: 10px;
+        font-size: 16px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.3s ease;
       }
 
-      footer {
-        margin-top:40px;
-        text-align:center;
-        color: var(--text-sub);
-        font-size:13px;
+      button:hover {
+        background: #000;
+      }
+
+      .footer {
+        margin-top: 16px;
+        font-size: 12px;
+        color: #9ca3af;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="logo">
-        <svg viewBox="0 0 180 40" xmlns="http://www.w3.org/2000/svg">
-          <rect width="40" height="40" rx="8" fill="var(--accent-nav)" />
-          <text x="8" y="27" font-size="20" font-weight="bold" fill="#fff">J</text>
-          <text x="50" y="27" font-size="20" font-weight="700" fill="var(--accent-nav)">inny</text>
-          <text x="110" y="27" font-size="20" font-weight="700" fill="var(--accent-lav)">Lab</text>
-        </svg>
-      </div>
-
-      <h1>카카오톡 톡방 입장 확인 자동 프로그램</h1>
-      <p class="subtitle">수강생 입장 체크, 클릭 한 번으로 완성하세요.</p>
-
-      <h3>1. 카톡 .csv 업로드</h3>
-      <input type="file" id="csvFile" accept=".csv" />
-
-      <h3>2. 수강생 명단 입력</h3>
-      <textarea
-        id="studentList"
-        placeholder="시트에 있는 명단을 복사해서 그대로 들고오시면 됩니다. (한 줄에 한 명씩)"
-      ></textarea>
-
-      <button class="btn-primary" onclick="processAttendance()">입장 확인하기</button>
-
-      <div class="result-section">
-        <h3>출석자 (<span id="presentCount">0</span>명)</h3>
-        <ul id="presentList"></ul>
-        <button class="copy-button" onclick="copyToClipboard('presentList')">복사하기</button>
-      </div>
-
-      <div class="result-section">
-        <h3>미출석자 (<span id="absentCount">0</span>명)</h3>
-        <ul id="absentList"></ul>
-        <button class="copy-button" onclick="copyToClipboard('absentList')">복사하기</button>
-      </div>
-
-      <div class="result-section">
-        <h3>명단 외 참여자 (<span id="extraCount">0</span>명)</h3>
-        <ul id="extraList"></ul>
-        <button class="copy-button" onclick="copyToClipboard('extraList')">복사하기</button>
-      </div>
-
-      <footer>© 2025 JinnyLab. All rights reserved.</footer>
+    <div class="login-box">
+      <h2>JinnyLab</h2>
+      <p>반복되는 업무에서 탈출하세요.<br />업무 생산성을 높이세요.</p>
+      <form id="login-form">
+        <input type="email" id="email" placeholder="이메일" required />
+        <input type="password" id="password" placeholder="비밀번호" required />
+        <button type="submit">로그인</button>
+      </form>
+      <div class="footer">© 2025 JinnyLab. All rights reserved.</div>
     </div>
 
     <script type="module">
-      import Papa from 'https://cdn.jsdelivr.net/npm/papaparse@5.4.1/+esm';
+      import { supabase } from './supabase.js';
 
-      window.processAttendance = () => {
-        const file = document.getElementById('csvFile').files[0];
-        const raw = document.getElementById('studentList').value.trim();
-        if (!file || !raw) {
-          alert('CSV 파일과 명단을 모두 입력해주세요.');
-          return;
-        }
+      const loginForm = document.getElementById('login-form');
 
-        const list = raw.split('\n').map((n) => n.trim());
-        Papa.parse(file, {
-          header: true,
-          complete: (res) => {
-            const joined = [...new Set(res.data.filter((r) => r.Message?.includes('들어왔습니다')).map((r) => r.User))];
-            const present = list.filter((n) => joined.includes(n));
-            const absent = list.filter((n) => !joined.includes(n));
-            const extra = joined.filter((n) => !list.includes(n));
+      loginForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-            document.getElementById('presentCount').textContent = present.length;
-            document.getElementById('absentCount').textContent = absent.length;
-            document.getElementById('extraCount').textContent = extra.length;
+        const email = loginForm.email.value;
+        const password = loginForm.password.value;
 
-            document.getElementById('presentList').innerHTML = present.map((n) => `<li>${n}</li>`).join('');
-            document.getElementById('absentList').innerHTML = absent.map((n) => `<li>${n}</li>`).join('');
-            document.getElementById('extraList').innerHTML = extra.map((n) => `<li>${n}</li>`).join('');
-          },
+        const { data, error } = await supabase.auth.signInWithPassword({
+          email,
+          password,
         });
-      };
 
-      window.copyToClipboard = (id) => {
-        const names = Array.from(document.getElementById(id).children)
-          .map((li) => li.textContent)
-          .join('\n');
-        navigator.clipboard.writeText(names).then(() => alert('복사되었습니다!'));
-      };
+        if (error) {
+          alert('로그인 실패: ' + error.message);
+        } else {
+          window.location.href = 'main.html';
+        }
+      });
     </script>
   </body>
 </html>
