fix: fix login feature

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         if (error) {
           alert('로그인 실패: ' + error.message);
         } else {
-          window.location.href = 'main.html';
+          window.location.href = './main.html';
         }
       });
     </script>
